--- a/ts-style.css
+++ b/ts-style.css
@@ -239,6 +239,7 @@ button:hover {
 @media only screen and (min-width: 601px) {
     .main-image-container {
 	height: 100%;
+	background-color: yellowgreen;
     }
     .main-image-container img {
 	display: block;
