--- a/ts-style.css
+++ b/ts-style.css
@@ -81,6 +81,7 @@ nav {
 }
 p {
     color: #fff;
+    font-size: 14px;
 }
 #intro {
     margin-top: 10px;
@@ -246,6 +247,9 @@ button:hover {
 	max-width: 100%;
 	height: 100%;
 	border-bottom-right-radius: 25%;
+    }
+    p {
+	font-size: 16px;
     }
 
     nav {
